--- a/homepag/index.html
+++ b/homepag/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SenhorCrise</title>
+    <title>FLUXO</title>
     <style>
         *{
             margin: 0;
@@ -13,6 +13,8 @@
         body {
             display: flex;
             min-height: 100vh;
+            justify-content: center;
+            min-height: 100vh;
             background: linear-gradient(to bottom, #0b1042, #17294b, #020813);
         }
     </style>
@@ -20,10 +22,12 @@
 
 <body>
     <header>
-        <h1>Sr.Crise</h1>
-        <input type="text" placeholder="search">text
-        <button></button>
-    </header>
+        <input type="text" placeholder="search">
+        <button>sing up</button>
+        <button>log in</button>
+
+    </header>   
+    
 
 </body>
 
