--- a/empresas/index.html
+++ b/empresas/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <div class="logo">CNPJ BIZ</div>
+    <div class="logo">FLUXO</div>
     <nav>
       <a href="#" class="active">Pesquisa de Empresas</a>
       <a href="#">Blog</a>
