--- a/homepag/index.html
+++ b/homepag/index.html
@@ -13,7 +13,7 @@
   <header>
     <div class="logo"><span>FLUXO</span></div>
     <nav>
-      <a href="#">Buscar Profissionais</a>
+      <a href="/empresas/index.html">Buscar Profissionais</a>
       <a href="#">Como Funciona</a>
       <a href="#">Para Empresas</a>
       <a href="#">Blog</a>
